Add bold to headings

--- a/index.html
+++ b/index.html
@@ -28,52 +28,70 @@
             </div>
         </div>
         <div class="header">
-            <div class="search-button"></div>
-            <div class="search-bar"></div>
-            <div class="bell-button"></div>
-            <div class="logo"></div>
-            <div>Adarsh Unni</div>
-            <button>New</button>
-            <button>Upload</button>
-            <button>Share</button>
+            <div class="top">
+                <div class="top-left">
+                    <button class="search-button"><img src="images/search-logo.png" alt="seach-logo"></button>
+                    <form action="" method="">
+                        <label for="search"></label>
+                        <input type="text" name="search" id="search">
+                    </form>
+                </div>
+                <div class="top-right">
+                    <button class="bell-icon"><img src="images/bell-icon.png" alt="bell-icon"></button>
+                    <button class="profile-image-one"><img src="images/profile-image.jpg" alt="profile-image"></button>
+                    <div class="profile-name">Adarsh Unni</div>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="bottom-left">
+                    <button class="profile-image-two"><img src="images/profile-image.jpg" alt="profile-image"></button>
+                    <div class="greeting"><div>Hi there,</div><div>Adarsh Unni (@adarshunni08)</div></div>
+                </div>
+                <div class="bottom-right">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
         </div>
         <div class="main-content">
-            <div class="projects"> 
-                <div class="super-duper-cool">Super Duper Cool Project
+            <div class="projects">
+                <div class="super-duper-cool"><h3>Super Duper Cool Project</h3>
                     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, hic consequatur tenetur vero maxime neque non harum repellendus iusto quos veritatis dolore iure ab ex ea exercitationem minima commodi officiis?</div>
                 </div>
-                <div class="cool">Cool Project
+                <div class="cool"><h3>Cool Project</h3>
                     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.</div>
                 </div>
-                <div class="super-cool">Super Cool Project
+                <div class="super-cool"><h3>Super Cool Project</h3>
                     <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt ipsa, hic porro aspernatur accusamus dolorum delectus illo amet enim animi expedita eos totam vero quidem magnam voluptate voluptatem velit possimus quasi. Ipsam, facilis!</div>
                 </div>
-                <div class="impossible-app">Impossible App
+                <div class="impossible-app"><h3>Impossible App</h3>
                     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, voluptatum exercitationem eius voluptatem quasi dolor rem velit ad? Porro doloribus ipsam blanditiis neque saepe sed commodi consequatur repudiandae. Quae, repellendus!</div>
                 </div>
-                <div class="interesting">Interesting Project
+                <div class="interesting"><h3>Interesting Project</h3>
                     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo autem omnis ratione necessitatibus, accusamus consequatur odio cum voluptatum nisi dolore similique consequuntur. Et, optio officia!</div>
                 </div>
-                <div class="impossible-project">Impossible Project
+                <div class="impossible-project"><h3>Impossible Project</h3>
                     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores molestias dolorem ut voluptas hic explicabo reprehenderit nobis necessitatibus! In, nobis!</div>
                 </div>
             </div>
-            <div class="announcements">Announcements
-                <div class="site-maintenance">Site maintenance
+            <div class="announcements"><h2>Announcements</h2>
+                <div class="site-maintenance"><h3>Site maintenance</h3>
                     <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit necessitatibus nihil aut nostrum nesciunt nemo?</div>
                 </div>
-                <div class="community">Community Share Day
+                <div class="community"><h3>Community Share Day</h3>
                     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem itaque magni ut cumque adipisci ipsam.</div>
                 </div>
-                <div class="update-privacy">Update Privacy Policy
+                <div class="update-privacy"><h3>Update Privacy Policy</h3>
                     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde vero explicabo illo accusantium voluptate nihil.</div>
                 </div>
             </div>
-            <div class="trending"> Trending
-                <div class="adarsh">Adarsh</div>
-                <div class="ayana">Ayana</div>
-                <div class="mhr">MHR</div>
-                <div class="joker">JOKER</div>
+            <div class="trending"> <h2>Trending </h2>
+                <div class="adarsh"><b>Adarsh </b></div>
+                <div class="ayana"><b>Ayana </b></div>
+                <div class="allu"><b>Allu </b></div>
+                <div class="athu"><b>Athu </b></div>
+                <div class="anu"><b>Anu </b></div>
             </div>
         </div>
     </div>
